# bevy-trait-query

./: Cargo.toml  README.md
bevy-trait-query/: Cargo.toml
bevy-trait-query-impl/: Cargo.toml
bevy-trait-query-impl/src/: lib.rs
bevy-trait-query/src/: lib.rs  tests.rs
bevy-trait-query/src/all/core/: read.rs  write.rs
bevy-trait-query/src/all/impls/: all.rs
bevy-trait-query/src/internal/: trait_registry.rs  trait_state.rs
bevy-trait-query/src/one/core/: change_detection.rs  fetch.rs
bevy-trait-query/src/one/impls/: one.rs  one_added.rs  one_changed.rs  with_one.rs  without_any.rs
